--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,113 @@ h1 {
     text-align:center;
 }
 
+h2 {
+    text-transform: uppercase;
+    font-size:48rem;
+    margin: 0;
+    letter-spacing: .4rem;
+    color:darkred;
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
+h3 {
+    text-transform: uppercase;
+    font-size:32rem;
+    margin: 0;
+    letter-spacing: .4rem;
+    color:darkred;
+    background-color:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
+h4 {
+    text-transform: uppercase;
+    font-size:48rem;
+    margin: 0;
+    letter-spacing: .4rem;
+    padding-bottom: 18rem;
+    color:darkred;
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
+span {
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 8rem;
+    padding-right: 8rem;
+}
+
+h5 {
+    text-transform: uppercase;
+    font-size:16rem;
+    margin-top: 4rem;
+    letter-spacing: .4rem;
+    padding-bottom: 8rem;
+    padding-top: 8rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
+    color:#FFF;
+    background-color:.09375rem .09375rem .09375rem #333;
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
 
 /* Section & Paragraph */
 
+section {
+    margin: 8rem;
+}
+
+p {
+    margin-top: 16rem;
+    margin-bottom: 16rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 16rem;
+    padding-right: 16rem;
+    width: 90%;
+    text-align:left;
+}
 
 
 /* Image & Figure */
 
+img {
+    width: 100%;
+    max-width: 800rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+figure {
+    margin-bottom: 32rem;
+}
+
+figcaption {
+    padding-top: 8rem;
+    text-align:right;
+}
 
 
 /* Footer */
 
-
+footer {
+    padding-top: 16rem;
+    padding-bottom: 16rem;
+    padding-left: 16rem;
+    padding-right: 16rem;
+    border-top: #333;
+    border-style: solid;
+    border-width: 32rem;
+}
