--- a/css/style.css
+++ b/css/style.css
@@ -1,177 +1,223 @@
-/* Imported Typeface Files */
+/* General setup */
 
-@font-face {
-    font-family:Lato;
-    src: url(../fonts/lato-regular.ttf);
-    font-style:normal;
-    font-weight:normal;
+* {
+    box-sizing: border-box;
 }
-@font-face {
-
-    font-family:Alfa Slab One;
-    src: url(../fonts/alfa-slab-one-regular.ttf);
-    font-style:normal;
-    font-weight:normal;
-}
-
-
-/* Root */
 
 html {
     font-size:16px;
 }
 
-
-/* Body & Main  */
-
 body {
-    font-family:Lato, Arial, sans-serif;
-    font-size:1rem;
-    padding:1rem;
-    min-width:39rem;
-    max-width:50rem;
-    margin:0 auto;
+    margin: 1.5rem auto;
+    width:90%;
+    min-width:56.25rem;
 }
+
+/* Layout */
+
 main {
-    background-color:#ddd;
-    background-image:url(../images/wrinkled-white-paper-background.jpg);
-    background-size:cover;
-    background-repeat: no-repeat;
-    border:1px solid #333;
+    overflow:auto;
+    min-width:45rem;
+    
+}
+
+section {
+    float: left;
+    min-width: 22.5rem;
+    width:50%;
+}
+
+figure {
+    width:60%;
+    margin:0 10% 0 0;
+    float:left;
+}
+
+figure img {
+    width:100%;
+    max-width:25rem;
+}
+
+figcaption {
+    margin:.375rem 0;
+}
+
+.long-list {
+    margin-top:0;
+}
+
+nav {
+    float: left;
+    width:11.25rem;
+}
+
+footer {
+    clear: both;
+    margin-top:1.5rem;
+}
+
+section, aside, nav, footer {
+  padding: .5rem;
+}
+
+/* header and footer */
+
+header, footer {
+  border-top: .125rem solid #33658A;
+  border-bottom: .125rem solid #33658A;
 }
 
 /* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
 
 /* NO changes should be made to any of the code above. */
 
-/* The first heading style rule has been completed for you. Examine it carefully
-   to get an idea of some of the style properties you will need to use; then
-   complete the style code according to the instructions in Canvas. */
-
 /* NOTE: While you will be using some of the same CSS properties, the VALUES 
    may need to be different in order to style the page correctly. */
 
 
-/* Headings  */
+
+/* Imported Typfaces */
+
+@font-face {
+
+    font-family:serif;
+    src: url(../fonts/alfa-slab-one-regular.ttf) format('truetype');
+    font-weight:normal;
+    font-style:normal;
+}
+
+/* Typography Styles */
+
+html {
+    font-family:sans-serif;
+    src: url(../fonts/montserrat-regular.ttf) format('truetype');
+    font-weight:normal;
+    font-style:normal;
+}
 
 h1 {
-    text-transform: uppercase;
-    font-size:6rem;
-    margin: 0;
-    letter-spacing: .5rem;
-    color:darkred;
-    text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
+    font-family:serif;
+    src: url(../fonts/josefinslab-regular.ttf) format('truetype');
+    font-weight:normal;
+    font-style:normal;
+    letter-spacing: 2rem;
+    font-size: 60rem;
+    margin: 18rem;
+    text-align: center;
 }
 
 h2 {
-    text-transform: uppercase;
-    font-size:48rem;
-    margin: 0;
-    letter-spacing: .4rem;
-    color:darkred;
-    text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
+    font-family:serif;
+    src: url(../fonts/josefinslab-regular.ttf) format('truetype');
+    font-weight:normal;
+    font-style:normal;
+    letter-spacing: 2rem;
+    font-size: 24rem;
 }
 
-h3 {
-    text-transform: uppercase;
-    font-size:32rem;
-    margin: 0;
-    letter-spacing: .4rem;
-    color:darkred;
-    background-color:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
-}
-
-h4 {
-    text-transform: uppercase;
-    font-size:48rem;
-    margin: 0;
-    letter-spacing: .4rem;
-    padding-bottom: 18rem;
-    color:darkred;
-    text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
-}
-
-span {
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 8rem;
-    padding-right: 8rem;
-}
-
-h5 {
-    text-transform: uppercase;
-    font-size:16rem;
-    margin-top: 4rem;
-    letter-spacing: .4rem;
-    padding-bottom: 8rem;
-    padding-top: 8rem;
-    padding-left: 8rem;
-    padding-right: 8rem;
-    color:#FFF;
-    background-color:.09375rem .09375rem .09375rem #333;
-    text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
-}
-
-
-/* Section & Paragraph */
-
-section {
-    margin: 8rem;
+h2 + p {
+    font-size: 12rem;
+    letter-spacing: .5rem;
+    word-spacing: 2rem;
+    text-indent: 24rem;
 }
 
 p {
-    margin-top: 16rem;
-    margin-bottom: 16rem;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 16rem;
-    padding-right: 16rem;
-    width: 90%;
-    text-align:left;
+    font-size: 12rem;
+    letter-spacing: .5rem;
+    word-spacing: 2rem;
 }
 
-
-/* Image & Figure */
-
-img {
-    width: 100%;
-    max-width: 800rem;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-figure {
-    margin-bottom: 32rem;
+li {
+    font-size: 12rem;
+    letter-spacing: .5rem;
+    word-spacing: 2rem;
 }
 
 figcaption {
-    padding-top: 8rem;
-    text-align:right;
+    font-size: 12rem;
+    margin-bottom: 32rem;
 }
 
 
-/* Footer */
+/* Link Styling */
+
+a {
+    outline: none;
+    color: #33658A;
+}
+
+a:link,
+a:visited {
+    outline: none;
+    color: #33658A;
+    border-bottom: none;
+}
+
+a:focus,
+a:hover {
+    outline: none;
+    border-bottom: none;
+}
+
+
+/* List Styling */
+
+ul {
+    margin-top: 16rem;
+    margin-bottom: 16rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    list-style-type: square;
+}
+
+ol {
+    margin-top: 16rem;
+    margin-bottom: 16rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    list-style-type: lower-alpha;
+}
+
+.long-list a:hover {
+    list-style-type: upper-alpha;
+}
+
+
+/* Navigation Menu */
+
+nav {
+    padding-left: 0rem;
+    margin-top: 4rem;
+}
+
+nav a {
+    border-bottom: none;
+    display: inline-block;
+    width: 100%;
+    line-height: 3;
+    text-align: center;
+    font-size: 18rem;
+    margin-bottom: 24rem;
+    border: solid, #33658A;
+    border-width: 1rem;
+}
+
+nav a:focus,
+nav a:hover {
+    color: #FFF;
+    background-color: #33658A;
+}
+
+nav a:active {
+    color: #FFF;
+    background-color: #000;
+}
+
+
+/* Footer Styles */
 
 footer {
-    padding-top: 16rem;
-    padding-bottom: 16rem;
-    padding-left: 16rem;
-    padding-right: 16rem;
-    border-top: #333;
-    border-style: solid;
-    border-width: 32rem;
+    text-align: center;
 }
